Update java_string_deduplication.md